# napari-battery

./: README.md
napari-battery/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
napari-battery/src/napari_battery/: __init__.py  _reader.py  _sample_data.py  _widget.py  napari.yaml
napari-battery/src/napari_battery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari-battery/src/napari_battery/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
